로고 클릭 영역 변경

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 <body id="App">
     <div class="container">
-        <div class="logo clickable" onclick="location.href='./index.html'">
-            <img src="./asset/logo.png">
+        <div class="logo">
+            <img class="clickable" onclick="location.href='./index.html'" src="./asset/logo.png">
         </div>
         <div class="search-box">
             <input id="query" type="search">
