--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <img class="clickable" onclick="location.href='./index.html'" src="./asset/logo.png">
         </div>
         <div class="search-box">
-            <input id="query" type="search">
+            <input id="query" type="search" placeholder="검색어를 입력해주세요">
             <button class="btn-search clickable"></button>
         </div>
     </div>
