--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 
 <body id="App">
+    <div class="header">
+        <select id="language">
+            <option value="en-US">english</option>
+            <option value="ko">korean</option>
+        </select>
+    </div>
     <div class="container">
         <div class="logo">
             <img class="clickable" onclick="location.href='./index.html'" src="./asset/logo.png">
@@ -16,6 +22,7 @@
             <input id="query" type="search" placeholder="검색어를 입력해주세요">
             <button class="btn-search clickable"></button>
         </div>
+        <div class="message-box"></div>
     </div>
     <div class="movie-list">정보가 없습니다</div>
 </body>
